# starting-ragchat

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  query_flow_diagram.md
.claude/: settings.local.json
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: README.md  __init__.py  conftest.py  test_simple_api.py
frontend/: index.html  script.js  style.css
scripts/: format_code.py  format_code.sh  quality_check.py  quality_check.sh
